--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-.venv/
-__pycache__/
-vectorstore/
-.ngrok2/
+# Environment
 .env
+.env.*
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+
+# Virtual environment
+.venv/
+
+# OS files
+.DS_Store
+Thumbs.db
